--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -18,6 +18,10 @@
 //  example -> @include font-face('PFDinTextPro', 'PFDinTextPro-Bold', 700, italic);
 
 @include font-face('slick');
-
+@include font-face('ProximaNova', 'ProximaNovaLight', 300);
+@include font-face('ProximaNova', 'ProximaNovaRegular', 400);
+@include font-face('ProximaNova', 'ProximaNovaSemibold', 600);
+@include font-face('ProximaNova', 'ProximaNovaExtrabold', 800);
+@include font-face('ProximaNova', 'ProximaNovaBlack', 900);
 
 /* /fonts*/
