--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -21,6 +21,7 @@
 @include font-face('ProximaNova', 'ProximaNovaLight', 300);
 @include font-face('ProximaNova', 'ProximaNovaRegular', 400);
 @include font-face('ProximaNova', 'ProximaNovaSemibold', 600);
+@include font-face('ProximaNova', 'ProximaNovaBold', 700);
 @include font-face('ProximaNova', 'ProximaNovaExtrabold', 800);
 @include font-face('ProximaNova', 'ProximaNovaBlack', 900);
 
