--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,21 @@
 <!-- HEADER -->
 <header>
-
+    <div class="mbox">
+    <div class="header-wrap cfix">
+        <div class="logo"><span>lightwood</span></div>
+        <nav>
+            <div class="butter"><p></p><p></p><p></p></div>
+            <ul>
+                <li><a href="#">примеры </a></li>
+                <li><a href="#">преимущества</a></li>
+                <li><a href="#">как все работает  </a></li>
+                <li><a href="#">варианты</a></li>
+                <li><a href="#">заказать</a></li>
+            </ul>
+        </nav>
+        <div class="tel"><a href="tel:+7495773-72-96">+7(495)773-72-96</a><a href="tel:+7495773-72-96">+7(495)773-72-96</a></div>
+    </div>
+    </div>
 </header>
 <!-- /HEADER -->
 
