--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         <div class="logo"><span>lightwood</span></div>
         <nav>
             <div class="butter"><p></p><p></p><p></p></div>
-            <ul>
+            <ul class="menu-top">
                 <li><a href="#">примеры </a></li>
                 <li><a href="#">преимущества</a></li>
                 <li><a href="#">как все работает  </a></li>
