--- a/src/sass/adaptation_scss/adaptation_develop_5.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_5.scss
@@ -1,3 +1,38 @@
+/*header*/
+     @media screen and (max-width: 1600px){
+        .header-wrap{padding: 0  20px;
+            nav{  padding-left: 0px; margin-left: -100px;}
+        }
+    }
+     @media screen and (max-width: 1280px){
+        .header-wrap{padding: 0  20px;
+            nav{  padding-left: 0px; margin-left: 0;}
+            li{    margin-left: 15px;}
+            .tel{padding-top: 24px;
+                a{display: block;margin-bottom: 5px;
+                    &:last-child{margin-left:0;}
+                }
+            }
+        }
+    }
+     @media screen and (max-width: 992px){
+            .header-wrap{text-align: center;
+                .butter{display: block;}
+                ul{display: none; position: absolute; background-color: #fff; left: -156px; top: 68px;  width: 300px; border-radius: 8px; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.3); padding: 10px 0;}
+                li{display: block; padding: 10px 0; margin-left: 0;}
+            }
+     }
+     @media screen and (max-width: 480px){
+            .header-wrap{ height: auto; padding-bottom: 10px;
+                .logo{width: 100%;text-align: left;}
+                .tel{float:left;width: 100%; text-align: left;}
+                nav{position: absolute;   right: 50px; bottom: 70px;}
+                ul{left: -260px;}
+            }
+     }
+/*END header*/
+
+
 /*top-block*/
     @media screen and (max-width: 1600px){
         .top-block{
@@ -6,7 +41,7 @@
             }
         }
     }
-    @media screen and (max-width: 1240px){
+    @media screen and (max-width: 1280px){
         .top-block{
             .top-block-wrap{
                 .column2{display: none;}
