--- a/src/sass/adaptation_scss/adaptation_develop_2.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_2.scss
@@ -11,7 +11,7 @@
 
 }
 @media screen and (max-width: 1024px){
-
+    .faq-wrap .after-block .accordion {width: 100%;}
 }
 @media screen and (max-width: 992px){
 
