--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,51 @@
-<!-- FOOTER -->
-<div class="footer_placeholder"></div>
-<footer class="footer">
+    <!-- FOOTER -->
+    <div class="footer_placeholder"></div>
+    <footer class="footer">
+        <div class="mbox">
 
-</footer>
-<!-- FOOTER -->
+            <div class="footer-left">
+                <div class="footer-logo">
+                    <span>lightwood</span>
+                </div>
+                <div class="footer-logo-text">© 2016 Lightwood. Все права защищены</div>
+            </div>
 
-<!-- SCRIPTS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script type="text/javascript" src="js/validate_script.js" ></script>
-<script type="text/javascript" src="js/main.js" ></script>
-<!-- /SCRIPTS -->
+            <div class="footer-nav">
+                <ul>
+                    <li>
+                        <a href="#">примеры</a>
+                    </li>
+                    <li>
+                        <a href="#">преимущества</a>
+                    </li>
+                    <li>
+                        <a href="#">как все работает</a>
+                    </li>
+                    <li>
+                        <a href="#">варианты</a>
+                    </li>
+                    <li>
+                        <a href="#">заказать</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer-right">
+                <p>123001, Россия, Москва, Большой Патриарший пер., 3,</p>
+                <p>
+                    тел: <a href="callto:+7(495)773-72-96">+7(495)773-72-96</a> <a href="callto:+7(495)773-72-96">+7(495)773-72-96</a>
+                </p>
+                <p>
+                    e-mail: <a href="mailto:lightwood@yahoo.com">lightwood@yahoo.com</a>
+                </p>
+            </div>
+
+        </div>
+    </footer>
+    <!-- FOOTER -->
+
+    <!-- SCRIPTS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/validate_script.js" ></script>
+    <script type="text/javascript" src="js/main.js" ></script>
+    <!-- /SCRIPTS -->
