--- a/src/sass/develop_scss/develop_5.scss
+++ b/src/sass/develop_scss/develop_5.scss
@@ -67,3 +67,12 @@
         }
     }
 /*END top-block*/
+/*top slider*/
+    .top-slider{
+        .top-slider-wrap{
+            .slider-top{}
+            .slide{}
+            .img{}
+        }
+    }
+/*END top slider*/
