--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,42 +2,46 @@
     <div class="footer_placeholder"></div>
     <footer class="footer">
         <div class="mbox">
+            <div class="footer-wrap">
 
-            <div class="footer-left">
-                <div class="footer-logo">
-                    <span>lightwood</span>
+                <div class="footer-left">
+                    <div class="footer-logo">
+                        <span>lightwood</span>
+                    </div>
+                    <div class="footer-logo-text hide-notebook">© 2016 Lightwood. Все права защищены</div>
                 </div>
-                <div class="footer-logo-text">© 2016 Lightwood. Все права защищены</div>
-            </div>
 
-            <div class="footer-nav">
-                <ul>
-                    <li>
-                        <a href="#">примеры</a>
-                    </li>
-                    <li>
-                        <a href="#">преимущества</a>
-                    </li>
-                    <li>
-                        <a href="#">как все работает</a>
-                    </li>
-                    <li>
-                        <a href="#">варианты</a>
-                    </li>
-                    <li>
-                        <a href="#">заказать</a>
-                    </li>
-                </ul>
-            </div>
+                <div class="footer-nav">
+                    <ul>
+                        <li>
+                            <a href="#">примеры</a>
+                        </li>
+                        <li>
+                            <a href="#">преимущества</a>
+                        </li>
+                        <li>
+                            <a href="#">как все работает</a>
+                        </li>
+                        <li>
+                            <a href="#">варианты</a>
+                        </li>
+                        <li>
+                            <a href="#">заказать</a>
+                        </li>
+                    </ul>
+                </div>
 
-            <div class="footer-right">
-                <p>123001, Россия, Москва, Большой Патриарший пер., 3,</p>
-                <p>
-                    тел: <a href="callto:+7(495)773-72-96">+7(495)773-72-96</a> <a href="callto:+7(495)773-72-96">+7(495)773-72-96</a>
-                </p>
-                <p>
-                    e-mail: <a href="mailto:lightwood@yahoo.com">lightwood@yahoo.com</a>
-                </p>
+                <div class="footer-right">
+                    <p>123001, Россия, Москва, Большой Патриарший пер., 3,</p>
+                    <p>
+                        тел: <a href="callto:+7(495)773-72-96">+7(495)773-72-96</a> <a href="callto:+7(495)773-72-96">+7(495)773-72-96</a>
+                    </p>
+                    <p>
+                        e-mail: <a href="mailto:lightwood@yahoo.com">lightwood@yahoo.com</a>
+                    </p>
+                    <p class="show-notebook">© 2016 Lightwood. Все права защищены</p>
+                </div>
+
             </div>
 
         </div>
