--- a/src/sass/adaptation_scss/adaptation_develop_2.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_2.scss
@@ -12,6 +12,7 @@
 }
 @media screen and (max-width: 1024px){
     .faq-wrap .after-block .accordion {width: 100%;}
+    .slider-wrap .conteiner .content-slider { padding-bottom: 50px;}
 }
 @media screen and (max-width: 992px){
 
