--- a/src/partials/top-slider.html
+++ b/src/partials/top-slider.html
@@ -1,21 +1,49 @@
 <section id="top-slider" class="top-slider">
     <div class="top-slider-wrap">
         <div class="mbox">
-            <title>
+            <div class="title">
                 <h2>Примеры в интерьерах</h2>
-            </title>
+            </div>
             <div class="slider-top">
                 <div class="slide">
-                    <div class="img"><img src="images/ts1.jpg" alt=""></div>
+                    <a class="fancybox img" rel="gallery1" href="images/sl1.jpg" >
+                        <img src="images/ts1.jpg" alt="" />
+                    </a>
                 </div>
                 <div class="slide">
-                    <div class="img"><img src="images/ts2.jpg" alt=""></div>
+                    <a class="fancybox img" rel="gallery1" href="images/sl2.jpg" >
+                        <img src="images/ts2.jpg" alt="" />
+                    </a>
                 </div>
                 <div class="slide">
-                    <div class="img"><img src="images/ts3.jpg" alt=""></div>
+                    <a class="fancybox img" rel="gallery1" href="images/sl3.jpg" >
+                        <img src="images/ts3.jpg" alt="" />
+                    </a>
                 </div>
                 <div class="slide">
-                    <div class="img"><img src="images/ts4.jpg" alt=""></div>
+                    <a class="fancybox img" rel="gallery1" href="images/sl4.jpg" >
+                        <img src="images/ts4.jpg" alt="" />
+                    </a>
+                </div>
+                <div class="slide">
+                    <a class="fancybox img" rel="gallery1" href="images/sl1.jpg" >
+                        <img src="images/ts1.jpg" alt="" />
+                    </a>
+                </div>
+                <div class="slide">
+                    <a class="fancybox img" rel="gallery1" href="images/sl2.jpg" >
+                        <img src="images/ts2.jpg" alt="" />
+                    </a>
+                </div>
+                <div class="slide">
+                    <a class="fancybox img" rel="gallery1" href="images/sl3.jpg" >
+                        <img src="images/ts3.jpg" alt="" />
+                    </a>
+                </div>
+                <div class="slide">
+                    <a class="fancybox img" rel="gallery1" href="images/sl4.jpg" >
+                        <img src="images/ts4.jpg" alt="" />
+                    </a>
                 </div>
             </div>
         </div>
