--- a/src/partials/how-it-work.html
+++ b/src/partials/how-it-work.html
@@ -1,4 +1,4 @@
-<section class="how-it-works">
+<section id="how-it-works" class="how-it-works">
     <div class="mbox">
         <div class="how-it-works-wrap">
             <div class="title">
@@ -13,10 +13,23 @@
                         </span>
                         <span class="img-text">01</span>
                     </div>
-                    <div class="how-it-works-descript">
-                        <div class="descript-title">РАЗРАБОТКА ДИЗАЙНА</div>
-                        <div class="descript-text">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</div>
+                    <div class="txt">
+                        <p>РАЗРАБОТКА ДИЗАЙНА</p>
+                        <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
                     </div>
+                </div>
+                <div class="qudro-pupter">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </div>
                 <div class="how-it-works-item">
                     <div class="how-it-works-cirle">
@@ -26,9 +39,26 @@
                         <span class="img-text">02</span>
                     </div>
                     <div class="how-it-works-descript">
-                        <div class="descript-title">ПРОИЗВОДСТВО ПАНЕЛЕЙ</div>
-                        <div class="descript-text">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</div>
+                        <div class="descript-title"></div>
+                        <div class="descript-text"></div>
                     </div>
+                    <div class="txt">
+                        <p>ПРОИЗВОДСТВО ПАНЕЛЕЙ</p>
+                        <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
+                    </div>
+                </div>
+                <div class="qudro-pupter">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </div>
                 <div class="how-it-works-item">
                     <div class="how-it-works-cirle">
@@ -37,9 +67,10 @@
                         </span>
                         <span class="img-text">03</span>
                     </div>
-                    <div class="how-it-works-descript">
-                        <div class="descript-title">МОНТАЖ ПАНЕЛЕЙ</div>
-                        <div class="descript-text">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</div>
+
+                    <div class="txt">
+                        <p>МОНТАЖ ПАНЕЛЕЙ</p>
+                        <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
                     </div>
                 </div>
             </div>
