--- a/src/sass/adaptation_scss/adaptation_develop_5.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_5.scss
@@ -74,17 +74,124 @@
         .top-block{
             .top-block-wrap{
                 h1{padding-top:60px; max-width: 410px;
-                p{
-                    &:nth-child(1){font: 800 40px/40px 'ProximaNova'; }
-                    &:nth-child(2){font: 300 40px/40px 'ProximaNova';     letter-spacing: 2px;}
-                    &:nth-child(3){font: 700 30px/30px 'ProximaNova'; }
-                    &:nth-child(4){font: 700 16px/16px 'ProximaNova'; padding-top: 5px;}
+                    p{
+                        &:nth-child(1){font: 800 40px/40px 'ProximaNova'; }
+                        &:nth-child(2){font: 300 40px/40px 'ProximaNova';     letter-spacing: 2px;}
+                        &:nth-child(3){font: 700 30px/30px 'ProximaNova'; }
+                        &:nth-child(4){font: 700 16px/16px 'ProximaNova'; padding-top: 5px;}
+                    }
                 }
-            }
             }
         }
     }
 /*End top-block*/
 /*top-slider*/
-    .top-slider{    padding: 51px 0 100px;}
+    @media screen and (max-width:992px){
+        .top-slider{    padding: 45px 0 90px;}
+    }
+    @media screen and (max-width:480px){
+        .top-slider{    padding: 30px 0 60px;
+            .top-slider-wrap{
+                .slick-dots{ bottom: -40px;}
+            }
+        }
+    }
 /*END top-slider*/
+/*5reason*/
+    @media screen and (max-width:1366px){
+       .five-reason{
+           .five-reason-wrap{
+               .content{flex-wrap:wrap;justify-content: center; padding: 65px 0px 0;}
+               .item{max-width: 220px; width: 100%;}
+               .img{}
+               .txt{
+                    p{
+                        &:first-child{}
+                    }
+               }
+           }
+       }
+    }
+     @media screen and (max-width:480px){
+       .five-reason{
+           .five-reason-wrap{
+               .content{flex-wrap:wrap;justify-content: center; }
+               .item{max-width: 220px; width: 100%;}
+               .img{}
+               .txt{
+                    p{
+                        &:first-child{}
+                    }
+               }
+           }
+       }
+    }
+/*END 5reason*/
+/*contacts*/
+     @media screen and (max-width:1100px){
+         .contacts{
+            .contacts-wrap{padding-top: 0;
+                .txt{margin-right: 0;}
+                .contact-form-wrap{
+                    .form_row{padding-bottom: 10px;}
+                }
+            }
+        }
+    }
+    @media screen and (max-width:710px){
+         .contacts{
+            .contacts-wrap{ min-height: auto;
+                .mbox{padding: 0 20px;}
+                .txt{padding-top: 35px;  padding-bottom: 30px;
+                    p{ font: 700 26px/26px 'ProximaNova'; margin-bottom: 5px;
+                    &:nth-child(2){font: 700 38px/38px 'ProximaNova';}
+                    &:nth-child(3){ color:#c29870;background-color: #fff;  letter-spacing: 3px;}
+                }
+                }
+            }
+        }
+    }
+    @media screen and (max-width:480px){
+         .contacts{
+            .contacts-wrap{
+                .txt{
+                    p{ font: 700 18px/18px 'ProximaNova'; margin-bottom: 5px;
+                    &:nth-child(2){font: 700 26px/26px 'ProximaNova';}
+                    &:nth-child(3){ color:#c29870;background-color: #fff;  letter-spacing: 3px;}
+                }
+                }
+            }
+        }
+    }
+/*END contacts*/
+/*how it works*/
+     @media screen and (max-width:1040px){
+        .how-it-works{
+
+            .how-it-works-item{
+                &:first-child{.txt{padding-left: 0;}}
+                &:last-child{.txt{padding-left: 0;}}
+             }
+         }
+     }
+    @media screen and (max-width:992px){
+        .how-it-works{
+            .qudro-pupter{display: none;}
+            .txt{padding: 0 10px;
+                p{font: 300 16px/20px 'ProximaNova';
+                    &:first-child{font: 600 22px/22px 'ProximaNova';    padding-bottom: 23px;}
+                }
+            }
+        }
+    }
+    @media screen and (max-width:830px){
+        .how-it-works{
+            .how-it-works-wrap{  padding: 30px 20px 30px;}
+            .big-title{font: 400 26px/30px 'ProximaNova';}
+            .how-it-works-main{display: block;}
+            .how-it-works-item{max-width: none; padding-bottom: 35px;}
+            .qudro-pupter{display: none;}
+            .txt{text-align: center; max-width: 300px;}
+        }
+    }
+/*END how it works*/
