--- a/src/partials/top-block.html
+++ b/src/partials/top-block.html
@@ -25,7 +25,7 @@
                             </div>
                             <div class="form_row">
                                 <div class="form_input">
-                                    <input type="text" name="userEmail" required="required" placeholder="E-mail">
+                                    <input type="text" name="email" required="required" placeholder="E-mail">
                                 </div>
                             </div>
                             <div class="form_row">
