--- a/src/sass/adaptation_scss/adaptation_develop_5.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_5.scss
@@ -44,7 +44,7 @@
     @media screen and (max-width: 1280px){
         .top-block{
             .top-block-wrap{
-                .column1{border-right: 0;}
+                .column1{border-right: 0;width: 100%;}
                 .column2{display: none;}
             }
         }
