--- a/src/sass/develop_scss/develop_5.scss
+++ b/src/sass/develop_scss/develop_5.scss
@@ -1,7 +1,7 @@
 
 /*header*/
     header{position: relative;z-index: 500;}
-    .header-wrap{ height:83px; text-align: center;
+    .header-wrap{ height:83px; text-align: center; padding: 0 10px;
         .logo{font: 700 34px/34px 'ProximaNova'; color: #414141; float:left;    padding-top: 26px;}
         nav{position: relative; display: inline-block;      padding-left: 117px;   padding-top: 36px;}
         li{display: inline-block; margin-left: 34px;
@@ -13,6 +13,7 @@
         .tel{float:right;     padding-top: 33px;
             a{font: 400 18px/18px 'ProximaNova'; color: #262626; text-decoration: none;
                 &:last-child{margin-left: 27px;}
+                &:hover{text-decoration: underline;}
             }
         }
         .butter{width: 56px; height: 44px; background-color: #fff; box-shadow: 1px 1px 4px 0px rgba(0,0,0,0.1);     padding-top: 12px; position: absolute; top: 20px; right: -20px; cursor: pointer; display: none;
@@ -33,11 +34,13 @@
     .top-block{z-index: 10;position: relative;
         .top-block-wrap{position: relative;
             .top-block-align{display: flex; justify-content:center; }
-            .column1{max-width: 881px;border-right: 1px solid #fff;}
+            .column1{max-width: 881px;border-right: 1px solid #fff;position: relative;
+
+            }
             .column2{max-width:440px;border-right: 1px solid #fff;}
             .column3{max-width:440px;}
-            .form-button{position: relative; z-index: 200;}
-            .show-form{background-color: #ffcf50; width: 100%; font: 400 20px/20px 'ProximaNova'; text-transform: uppercase; text-align: center; height: 71px; color:#000; padding-top: 26px; cursor: pointer; transition:all 300ms;
+            .form-button{position: absolute; z-index: 200;width: 100%;bottom: 0;}
+            .show-form{background-color: #ffcf50; width: 100%; font: 400 20px/20px 'ProximaNova'; text-transform: uppercase; text-align: center; height: 71px; color:#000; padding-top: 26px; cursor: pointer; transition:all 300ms; border-top:1px solid #fff;
                 &:hover,
                 &.active{background-color: #ffb900;}
                 i{background-image: url(../images/busket.png); width: 18px;height: 18px; background-position: center; background-repeat: no-repeat; display: inline-block; vertical-align: top; margin-right: 5px;}
@@ -45,17 +48,17 @@
             .order-form-wrap{border:3px solid #ffb900;  width: 100%; position: absolute; background-color: #fff; padding: 58px 20px 31px; display: none;
                 .form_row{max-width: 475px; width:100%; margin: 0 auto;padding-bottom: 30px;}
                 button{width: 100%; text-align: center; height:45px; background-color: #ffc429; font: 600 16px/16px 'ProximaNova'; color: #333;border:0; text-transform: uppercase; cursor: pointer;}
-                input{color:#a0a0a0;font: 400 16px/16px 'ProximaNova'; height: 45px;background-color: #f5f5f5;width: 100%;border:0;    padding-left: 15px;}
-                ::-webkit-input-placeholder {color:#a0a0a0;font: 400 16px/16px 'ProximaNova';}
-                :-moz-placeholder {color:#a0a0a0;font: 400 16px/16px 'ProximaNova';}
-                ::-moz-placeholder {color:#a0a0a0;font: 400 16px/16px 'ProximaNova';}
-                :-ms-input-placeholder {color:#a0a0a0;font: 400 16px/16px 'ProximaNova';}
+                input{color:#a0a0a0;font: 400 16px/36px 'ProximaNova'; height: 45px;background-color: #f5f5f5;width: 100%;border:0;    padding-left: 15px;}
+                ::-webkit-input-placeholder {color:#a0a0a0;font: 400 16px/36px 'ProximaNova';}
+                :-moz-placeholder {color:#a0a0a0;font: 400 16px/36px 'ProximaNova';}
+                ::-moz-placeholder {color:#a0a0a0;font: 400 16px/43px 'ProximaNova';}
+                :-ms-input-placeholder {color:#a0a0a0;font: 400 16px/36px 'ProximaNova';}
             }
             .img{border-bottom: 1px solid #fff;
                 img{display: block;}
                 &:nth-child(2){border-bottom:none;}
             }
-            h1{text-align: center;position: absolute; top:0; left:50%; width: 100%; max-width: 805px; transform:translateX(-50%);     padding-top: 212px;
+            h1{text-align: center;position: absolute; top:0; left:50%; width: 100%; max-width: 805px; transform:translateX(-50%);     padding-top: 212px; z-index: 300;
 
                 p{color:#fff; text-transform: uppercase;
                     &:nth-child(1){font: 800 110px/80px 'ProximaNova'; text-shadow: 2px 2px rgba(0,0,0,0.1);}
