--- a/src/sass/style_basic.scss
+++ b/src/sass/style_basic.scss
@@ -14,9 +14,9 @@
 /* base styles*/
 *,*:before, *:after{box-sizing:border-box;outline:none;}
 html{height:100%;}
-body{min-height:100%;width:100%;font-family:arial,sans-serif;background:#fff;color:#3d3d3d;position:relative;font-size: 16px;line-height: 1; font-family: 'ProximaNova';}
+body{min-height:100%;width:100%;font-family:arial,sans-serif;background:#fff;color:#3d3d3d;position:relative;font-size: 16px;line-height: 1; font-family: 'ProximaNova'; min-width: 320px; }
 img{vertical-align:bottom;border:0;max-width:100%;}
-
+.global-wrapper{overflow: hidden;}
 /* /base styles */
 
 /* wraps styling*/
