--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,19 +14,19 @@
                 <div class="footer-nav">
                     <ul>
                         <li>
-                            <a href="#">примеры</a>
+                            <a href="#top-slider">примеры</a>
                         </li>
                         <li>
-                            <a href="#">преимущества</a>
+                            <a href="#five-reason">преимущества</a>
                         </li>
                         <li>
-                            <a href="#">как все работает</a>
+                            <a href="#how-it-works">как все работает</a>
                         </li>
                         <li>
-                            <a href="#">варианты</a>
+                            <a href="#bot-slider">варианты</a>
                         </li>
                         <li>
-                            <a href="#">заказать</a>
+                            <a href="#form-button">заказать</a>
                         </li>
                     </ul>
                 </div>
