--- a/src/partials/hidden-block.html
+++ b/src/partials/hidden-block.html
@@ -1,6 +1,6 @@
 <div class="hidden-block">
 
-    <div id="call_success">
+    <div id="call_success" style="background-color: #ffb900;">
         <div class="call-success">
              <div class="call_success">
                  <div class="call-title">Спасибо за заявку!</div>
