--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -20,7 +20,7 @@
                             </div>
                             <div class="form_row">
                                 <div class="form_input">
-                                    <input type="text" name="email" required="required" placeholder="E-mail">
+                                    <input type="email" name="email" required="required" placeholder="E-mail">
                                 </div>
                             </div>
                             <div class="form_row">
