--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,11 +6,11 @@
         <nav>
             <div class="butter"><p></p><p></p><p></p></div>
             <ul class="menu-top">
-                <li><a href="#">примеры </a></li>
-                <li><a href="#">преимущества</a></li>
-                <li><a href="#">как все работает  </a></li>
-                <li><a href="#">варианты</a></li>
-                <li><a href="#">заказать</a></li>
+                <li><a href="#top-slider">примеры </a></li>
+                <li><a href="#five-reason">преимущества</a></li>
+                <li><a href="#how-it-works">как все работает  </a></li>
+                <li><a href="#bot-slider">варианты</a></li>
+                <li><a href="#form-button">заказать</a></li>
             </ul>
         </nav>
         <div class="tel"><a href="tel:+7495773-72-96">+7(495)773-72-96</a><a href="tel:+7495773-72-96">+7(495)773-72-96</a></div>
