--- a/src/partials/top-block.html
+++ b/src/partials/top-block.html
@@ -9,7 +9,7 @@
             </h1>
             <div class="column1">
                 <div class="img"><img src="images/h1.jpg" alt=""></div>
-                <div class="form-button">
+                <div class="form-button" id="form-button">
                     <div class="show-form"><i></i><span>заказать</span></div>
                     <div class="order-form-wrap">
                         <form action="ajax.php" name="order-form" class="order-form">
@@ -25,7 +25,7 @@
                             </div>
                             <div class="form_row">
                                 <div class="form_input">
-                                    <input type="text" name="email" required="required" placeholder="E-mail">
+                                    <input type="email" name="email" required="required" placeholder="E-mail">
                                 </div>
                             </div>
                             <div class="form_row">
