--- a/src/sass/adaptation_scss/adaptation_develop_5.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_5.scss
@@ -1,4 +1,7 @@
 /*header*/
+    @media screen and (max-width: 1770px){
+        .header-wrap{padding: 0  10px; }
+    }
      @media screen and (max-width: 1600px){
         .header-wrap{padding: 0  20px;
             nav{  padding-left: 0px; margin-left: -100px;}
