--- a/src/sass/develop_scss/develop_5.scss
+++ b/src/sass/develop_scss/develop_5.scss
@@ -1,7 +1,7 @@
 
 /*header*/
     header{position: relative;z-index: 500;}
-    .header-wrap{ height:83px; text-align: center; padding: 0 10px;
+    .header-wrap{ height:83px; text-align: center;
         .logo{font: 700 34px/34px 'ProximaNova'; color: #414141; float:left;    padding-top: 26px;}
         nav{position: relative; display: inline-block;      padding-left: 117px;   padding-top: 36px;}
         li{display: inline-block; margin-left: 34px;
@@ -58,13 +58,13 @@
                 img{display: block;}
                 &:nth-child(2){border-bottom:none;}
             }
-            h1{text-align: center;position: absolute; top:0; left:50%; width: 100%; max-width: 805px; transform:translateX(-50%);     padding-top: 212px; z-index: 300;
+            h1{text-align: center;position: absolute; top:0; left:50%; width: 100%; max-width: 816px; transform:translateX(-50%);     padding-top: 212px; z-index: 300;
 
                 p{color:#fff; text-transform: uppercase;
                     &:nth-child(1){font: 800 110px/80px 'ProximaNova'; text-shadow: 2px 2px rgba(0,0,0,0.1);}
                     &:nth-child(2){font: 300 100px/100px 'ProximaNova';     letter-spacing: 12px;text-shadow: 2px 2px rgba(0,0,0,0.1);}
                     &:nth-child(3){font: 700 80px/80px 'ProximaNova';  color: #b8c7dc; background-color: #fff; padding:9px 0 5px;}
-                    &:nth-child(4){font: 700 55px/55px 'ProximaNova';    padding-top: 11px;     letter-spacing: 3px;text-shadow: 2px 2px rgba(0,0,0,0.1);}
+                    &:nth-child(4){font: 700 55px/55px 'ProximaNova';    padding-top: 11px;     letter-spacing: 4px;text-shadow: 2px 2px rgba(0,0,0,0.1);}
                 }
             }
 
@@ -103,10 +103,10 @@
 /*END top slider*/
 /*5reason*/
    .five-reason{
-       .five-reason-wrap{ background-image: url(../images/5r-BG.jpg); background-position: center;     padding: 52px 0; min-height: 425px; background-size: cover;
+       .five-reason-wrap{ background-image: url(../images/5r-BG.jpg); background-position: left center;     padding: 52px 0; min-height: 425px; background-size: cover;
             .mbox{ max-width: 1800px;padding: 0 20px;}
            .content{display: flex;  justify-content:space-between;      padding: 65px 123px 0;}
-           .item{width: 20%;}
+           .item{width: 20%; padding-bottom: 30px;}
            .img{text-align: center;width: 100%;margin-bottom: 26px;min-height: 51px;}
            .txt{text-align: center;
                 p{font: 300 18px/22px 'ProximaNova';
@@ -127,9 +127,9 @@
             }
             .contact-form-wrap{ width: 100%; max-width: 440px; display: inline-block; padding-bottom: 20px;
                 .form_row{max-width: 475px; width:100%; margin: 0 auto;padding-bottom: 20px;}
-                button{width: 100%; text-align: center; height:45px; background-color: #ffc429; font: 600 16px/16px 'ProximaNova'; color: #333;border:0; text-transform: uppercase; cursor: pointer;}
-                textarea{color:#a0a0a0;font: 400 16px/16px 'ProximaNova'; height: 200px;background-color: #f5f5f5;width: 100%;border:0;    padding-left: 15px; resize:none; padding-top: 5px;}
-                input{color:#a0a0a0;font: 400 16px/16px 'ProximaNova'; height: 45px;background-color: #f5f5f5;width: 100%;border:0;    padding-left: 15px;}
+                button{width: 100%; text-align: center; height:48px; background-color: #ffc429; font: 600 16px/16px 'ProximaNova'; color: #333;border:0; text-transform: uppercase; cursor: pointer;   }
+                textarea{color:#a0a0a0;font: 400 16px/16px 'ProximaNova'; height: 200px;background-color: #f5f5f5;width: 100%;border:0;    padding-left: 17px; resize:none; padding-top: 19px;}
+                input{color:#a0a0a0;font: 400 16px/16px 'ProximaNova'; height: 45px;background-color: #f5f5f5;width: 100%;border:0;    padding-left: 17px;}
                 ::-webkit-input-placeholder {color:#a0a0a0;font: 400 16px/16px 'ProximaNova';}
                 :-moz-placeholder {color:#a0a0a0;font: 400 16px/16px 'ProximaNova';}
                 ::-moz-placeholder {color:#a0a0a0;font: 400 16px/16px 'ProximaNova';}
