--- a/src/partials/about-panel.html
+++ b/src/partials/about-panel.html
@@ -5,7 +5,7 @@
                 <h2>О панелях</h2>
             </div>
             <div class="img">
-                <img class="mobile" src="images/about-img.jpg" alt="">
+               <!-- <img class="mobile" src="images/about-img.jpg" alt="">-->
                 <div class="animate-picture animate-section">
                     <div class="coin animate-delay num1"><img src="images/block/1.png" alt=""></div>
                     <div class="coin  animate-delay num2"><img src="images/block/2.png" alt=""></div>
@@ -31,39 +31,43 @@
                     <div class="coin  animate-delay num22"><img src="images/block/22.png" alt=""></div>
                     <div class="coin  animate-delay num23"><img src="images/block/23.png" alt=""></div>
                     <div class="coin  animate-delay num24"><img src="images/block/24.png" alt=""></div>
-                    <div class="coin  animate-delay num25"><img src="images/block/25.png" alt=""></div>
-                    <div class="coin  animate-delay num26"><img src="images/block/26.png" alt=""></div>
-                    <div class="coin  animate-delay num27"><img src="images/block/27.png" alt=""></div>
-                    <div class="coin  animate-delay num28"><img src="images/block/28.png" alt=""></div>
-                    <div class="coin  animate-delay num29"><img src="images/block/29.png" alt=""></div>
-                    <div class="coin  animate-delay num30"><img src="images/block/30.png" alt=""></div>
-                    <div class="coin  animate-delay num31"><img src="images/block/31.png" alt=""></div>
-                    <div class="coin  animate-delay num32"><img src="images/block/32.png" alt=""></div>
-                    <div class="coin  animate-delay num33"><img src="images/block/33.png" alt=""></div>
-                    <div class="coin  animate-delay num34"><img src="images/block/34.png" alt=""></div>
-                    <div class="coin  animate-delay num35"><img src="images/block/35.png" alt=""></div>
-                    <div class="coin  animate-delay num36"><img src="images/block/36.png" alt=""></div>
-                    <div class="coin  animate-delay num37"><img src="images/block/37.png" alt=""></div>
-                    <div class="coin  animate-delay num38"><img src="images/block/38.png" alt=""></div>
-                    <div class="coin  animate-delay num39"><img src="images/block/39.png" alt=""></div>
-                    <div class="coin  animate-delay num40"><img src="images/block/40.png" alt=""></div>
-                    <div class="coin  animate-delay num41"><img src="images/block/41.png" alt=""></div>
-                    <div class="coin  animate-delay num42"><img src="images/block/42.png" alt=""></div>
-                    <div class="coin  animate-delay num43"><img src="images/block/43.png" alt=""></div>
-                    <div class="coin  animate-delay num44"><img src="images/block/44.png" alt=""></div>
-                    <div class="coin  animate-delay num45"><img src="images/block/45.png" alt=""></div>
-                    <div class="coin  animate-delay num46"><img src="images/block/46.png" alt=""></div>
-                    <div class="coin  animate-delay num47"><img src="images/block/47.png" alt=""></div>
-                    <div class="coin  animate-delay num48"><img src="images/block/48.png" alt=""></div>
-                    <div class="coin  animate-delay num49"><img src="images/block/49.png" alt=""></div>
-                    <div class="coin  animate-delay num50"><img src="images/block/50.png" alt=""></div>
-                    <div class="coin  animate-delay num51"><img src="images/block/51.png" alt=""></div>
-                    <div class="coin  animate-delay num52"><img src="images/block/52.png" alt=""></div>
-                    <div class="coin  animate-delay num53"><img src="images/block/53.png" alt=""></div>
-                    <div class="coin  animate-delay num54"><img src="images/block/54.png" alt=""></div>
-                    <div class="coin  animate-delay num55"><img src="images/block/55.png" alt=""></div>
-                    <div class="coin  animate-delay num56"><img src="images/block/56.png" alt=""></div>
-
+                    <div class="animate-delay lleft">
+                    <div class="coin   num25"><img src="images/block/25.png" alt=""></div>
+                    <div class="coin   num26"><img src="images/block/26.png" alt=""></div>
+                    <div class="coin   num27"><img src="images/block/27.png" alt=""></div>
+                    <div class="coin   num28"><img src="images/block/28.png" alt=""></div>
+                    <div class="coin   num29"><img src="images/block/29.png" alt=""></div>
+                    <div class="coin   num30"><img src="images/block/30.png" alt=""></div>
+                    <div class="coin   num31"><img src="images/block/31.png" alt=""></div>
+                    <div class="coin   num32"><img src="images/block/32.png" alt=""></div>
+                    </div><div class="animate-delay rright">
+                    <div class="coin   num33"><img src="images/block/33.png" alt=""></div>
+                    <div class="coin   num34"><img src="images/block/34.png" alt=""></div>
+                    <div class="coin   num35"><img src="images/block/35.png" alt=""></div>
+                    <div class="coin   num36"><img src="images/block/36.png" alt=""></div>
+                    <div class="coin   num37"><img src="images/block/37.png" alt=""></div>
+                    <div class="coin   num38"><img src="images/block/38.png" alt=""></div>
+                    <div class="coin   num39"><img src="images/block/39.png" alt=""></div>
+                    <div class="coin   num40"><img src="images/block/40.png" alt=""></div>
+                    </div><div class="animate-delay lleft2">
+                    <div class="coin   num41"><img src="images/block/41.png" alt=""></div>
+                    <div class="coin   num42"><img src="images/block/42.png" alt=""></div>
+                    <div class="coin   num43"><img src="images/block/43.png" alt=""></div>
+                    <div class="coin   num44"><img src="images/block/44.png" alt=""></div>
+                    <div class="coin   num45"><img src="images/block/45.png" alt=""></div>
+                    <div class="coin   num46"><img src="images/block/46.png" alt=""></div>
+                    <div class="coin   num47"><img src="images/block/47.png" alt=""></div>
+                    <div class="coin   num48"><img src="images/block/48.png" alt=""></div>
+                    </div><div class="animate-delay rright2">
+                    <div class="coin   num49"><img src="images/block/49.png" alt=""></div>
+                    <div class="coin   num50"><img src="images/block/50.png" alt=""></div>
+                    <div class="coin   num51"><img src="images/block/51.png" alt=""></div>
+                    <div class="coin   num52"><img src="images/block/52.png" alt=""></div>
+                    <div class="coin   num53"><img src="images/block/53.png" alt=""></div>
+                    <div class="coin   num54"><img src="images/block/54.png" alt=""></div>
+                    <div class="coin   num55"><img src="images/block/55.png" alt=""></div>
+                    <div class="coin   num56"><img src="images/block/56.png" alt=""></div>
+                    </div>
                 </div>
             </div>
             <div class="txt">
